--- a/app/templates/deposit_final_summary.html
+++ b/app/templates/deposit_final_summary.html
@@ -219,6 +219,13 @@
   }
 }
 </style>
+<style>
+@media (max-width: 768px) {
+    .m-top-tabs {
+        display: none !important;
+    }
+}
+</style>
 {% endblock %}
 
 {% block content %}
